--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "~4.16.1",
     "express-validator": "^6.6.1",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
